--- a/css/style.css
+++ b/css/style.css
@@ -1,223 +1,4 @@
 body {
-    position: relative;
-    width: 1440px;
-    height: 3735px;
-    background: #FFFFFF;
-    margin: 0 auto
-    
-
-
-}
-header {
-    position: absolute;
-    width: 1440px;
-    height: 90px;
-    left: 0px;
-    top: 0px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    z-index: 1 ;
-    opacity: 70%;
-    background-color: rgba(242, 120, 92, 0.7);
-    
-    
-
+    margin: 0;
 }
 
-main {
-   width: 1440px; 
-    
-    
-
-}
-footer{
-    position: absolute;
-    width: 728.96px;
-    height: 33.65px;
-    left: 590px;
-    top: 3688px;
-    font-family: 'Red Hat Text', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 21px;
-
-color: #FFFFFF;
-    
-}
-
- .plan_you_trip {
-    position: relative;
-    height: 765px;
-    width: 100%;
-    position: absolute;
-    
-    
-}
-
-img {
-width: 800px;
-height: 800px;
-margin: auto 30px;
-border-radius: 16px;
-
-}
-
-.destination {
-    position: absolute;
-    width: 1440px;
-    height: 1042px;
-    left: 0px;
-    top: 1189px;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    overflow: hidden;
-   
-    
-}
-
-.stories {
-   
-    position: absolute;
-    width: 1201px;
-    height: 1322px;
-    left: 119px;
-    top: 2311px;
-
-    
-    
-}
-  
-
-.frame30 {
-position: absolute;
-width: 1440px;
-height: 1639px;
-left: 0px;
-top: 765px;
-
-
-}
-
-.bg {
-    position: absolute;
-    width: 1440px;
-    height: 3735px;
-    left: 0px;
-    top: 0px;
-    background: url(..//img/garrett-parker-1.png) top no-repeat;
-    z-index: -1;
-    
- }
-
- .bg_down {
-    position: absolute;
-    width: 1440px;
-    height: 1331px;
-    left: 0px;
-    top: 2404px;
-    background: url(..//img/Rectangle\ 33.png)  bottom no-repeat;
-    z-index: -1;
-}
-
-.slider {
-    width: 800px;
-    height: 800px;
-    display: flex;
-    justify-content: center;
-}
-
-.bg_opacity{
-    position: absolute;
-    width: 1440px;
-    height: 1270px;
-    left: 0px;
-    top: 2404px;
-    background: rgba(255, 255, 255, 0.7);  
-   
-}
-
-.stories img {
-    width: 400px;
-    height: 250px;
-    margin: 15px auto;
-}
-
-.stories__thai {
-    position: absolute;
-    width: 1200px;
-    height: 250px;
-    left: 120px;
-    top: 2444px;
-   
-
-}
-
-.stories__national_park {
-    position: absolute;
-    width: 1200px;
-    height: 250px;
-    left: 120px;
-    top: 2724px;
-    
-}
-
-.stories__mountains {
-    position: absolute;
-    width: 1200px;
-    height: 250px;
-    left: 120px;
-    top: 3004px;
-}
-
-.stories__journey {
-    position: absolute;
-    width: 1200px;
-    height: 250px;
-    left: 119px;
-    top: 3284px;
-      
-}
-.img__stories  {
-
-    width: 400px;
-    height: 250px;
-}
-
-.social {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 20px;
-    
-    position: absolute;
-    width: 140.96px;
-    height: 33.65px;
-    left: 1178px;
-    top: 3680px;
-    }
-
-.social__icon {
-    width: 30.85px;
-    height: 30.85px;
-    margin: auto 0;
-    
-}
-
-h2 {
-    font-family: 'Red Hat Text';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 53px;
-    color: #F2785C;
-}
-.travel_stories {
-    position: absolute;
-    width: 335px;
-    height: 53px;
-    left: 552px;
-    bottom: 1371px; 
-    margin: 0 auto;   
-}
