--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@500&display=swap');
+
+
 body {
-    margin: 0;
+    position: relative;
+    width: 1440px; 
+    margin: 0 auto;
+    border: solid black 1px;;
+   
+}
+header {
+    position: absolute;
+    width: 1440px;
+    height: 90px;
+    background: rgba(242, 120, 92, 0.7);
+    box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
+    z-index: 1;
+}
+main {
+
+}
+   
+
+footer {
+position: absolute;
+width: 1440px;
+height: 61px;
+bottom: 0;
+
+
 }
 
+h1{
+color: #FFFFFF;
+}
+h2 {
+    font-family: 'Red Hat Text', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 53px;
+    color: #F2785C;
+}
+
+.preview {
+  background: url(..//img/garrett-parker-1.png) no-repeat;  
+  height: 765px;
+  margin: 0 auto;
+}
+
+
+
+.steps {
+    width: 1440px;
+    height: 424px;
+
+}
+
+.destinations {
+    position: relative;
+    width: 1440px;
+    height: 1162px;
+    
+    overflow: hidden;
+   
+
+}
+
+.destinations__slider img {
+    width: 800px;
+    height: 800px;
+    margin: auto 30px;
+    border-radius: 16px;
+    
+    }
+.destinations__slider {
+    display: flex;
+    position: absolute;
+    left: -570px;
+    margin-top: 46px;
+}
+
+.stories {
+    background: url(..//img/Rectangle\ 33.png) no-repeat;
+    width: 1450px;
+    height: 1331px;
+    position: relative;
+    margin: auto 0;
+    left: -4px;
+}
+.stories__head {
+    padding-left: 552px;
+    display: block;
+    margin: auto 0;
+}
+
+.stories__bg {
+    position: relative;
+    width: 1440px;
+    height: 1270px;
+    background: rgba(255, 255, 255, 0.7);
+    margin: auto 0;
+    
+   
+}
